--- a/sefubrenda.com/.env
+++ b/sefubrenda.com/.env
@@ -1,4 +1,3 @@
-DB_HOST=your_database_host
+DB_NAME='RSVPs'
 DB_USER='root'
-DB_PASSWORD=your_database_password
-DB_DATABASE='RSVPs'
+DB_PASSWORD='root'
