--- a/sefubrenda.com/package.json
+++ b/sefubrenda.com/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.2"
+    "mysql2": "^3.6.2",
+    "sequelize": "^6.33.0"
   }
 }
